--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,12 +1,9 @@
-siteTitle: Netlify CMS + React Starter
-siteUrl: 'https://netlify-cms-react-starter.netlify.com'
-siteDescription: >-
-  A starter project for creating lightning-fast, offline-first websites with
-  Netlify CMS and React.
+siteTitle: Myselfrishi
+siteUrl: Myselfrishi.xyz
+siteDescription: Myselfrishi
 socialMediaCard:
-  image: /images/uploads/card-og.png
-  twitterCreatorAccount: '@Jinksi'
-  twitterSiteAccount: ''
-headerScripts: |-
-  <!-- Add your analytics scripts / verification meta here -->
+  image: /images/uploads/svga49205212957997846.png
+  twitterCreatorAccount: "@Jinksi"
+  twitterSiteAccount: ""
+headerScripts: <!-- Add your analytics scripts / verification meta here -->
 enableServiceWorker: false
